<resources>
    <string name="app_name">Meditation_App</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_login_with_email">OR LOGIN WITH EMAIL</string>
    <string name="forgot_password">forgot password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
</resources>