<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sample_landing"

    >

    <ImageView
        android:id="@+id/imageView_vectorbackground"
        android:layout_width="416dp"
        android:layout_height="431dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="169dp"
        android:layout_height="30dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="556dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_vectorbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/landing_group17" />

    <ImageView
        android:id="@+id/landing_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/what_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView_vectorbackground"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        app:srcCompat="@drawable/image_landing" />

    <ImageView
        android:id="@+id/imageView_vectorline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_vectorbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_image"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/linevector_landing" />

    <ImageView
        android:id="@+id/what_image"

        android:layout_width="274dp"
        android:layout_height="23dp"
        android:layout_marginTop="392dp"
        android:layout_marginBottom="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView_vectorline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/wha_landing" />

    <ImageView
        android:id="@+id/imageView_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_image"
        app:srcCompat="@drawable/med_desc" />


    <Button
        android:id="@+id/btn_landing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/landing_btn_signup"
        android:text="@string/sign_up"
        android:onClick="signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_desc"
        app:layout_constraintVertical_bias="0.213" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_landing"
        tools:ignore="ExtraText">
        <TextView
            android:id="@+id/already_haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#A1A4B2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_onclick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="#8E97FD"
            android:onClick="login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/already_haveAccount"
            app:layout_constraintTop_toBottomOf="@+id/btn_landing" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>